<resources>
    <string name="app_name">HelpVault</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="helps">Helps</string>
    <string name="profile">Profile</string>
    <string name="edit_and_manage_your_profile_details">Edit and manage your profile details</string>
    <string name="mike_tyson">Mike Tyson</string>
    <string name="art_director_at_mx_studios">Art director at MX Studios</string>
    <string name="_78">78</string>
    <string name="credits">Credits</string>
    <string name="_4_3">4.3</string>
    <string name="rating">Rating</string>
    <string name="_28">28</string>
    <string name="volunteered">Volunteered</string>
    <string name="bio">Bio</string>
    <string name="bio_details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="redeem_credits">Redeem Credits</string>
    <string name="redeem_big">Get your credits encashed for \nexclusive stuff</string>
    <string name="_4_7">4.7</string>
    <string name="help_wanted">Help Wanted</string>
    <string name="anonymous">Anonymous</string>
    <string name="within_1kms">within 1kms.</string>
    <string name="view_more">View More</string>
    <string name="recently_helped">Recently Helped</string>
    <string name="my_help_requests">My Help Requests</string>
    <string name="help_requests_and_history">Help requests and history</string>
    <string name="open_requests">Open Requests</string>
    <string name="_16th_oct">16th Oct.</string>
    <string name="baby_sitting_for_2">Baby Sitting for 2</string>
    <string name="_1_of_2_people_available">1 of 2 people available</string>
    <string name="no_specific_requirements">No specific requirements</string>
    <string name="closed_requests">Closed Requests</string>
    <string name="add_requests">add requests</string>
    <string name="get_volunteers">Get Volunteers</string>
    <string name="give_a_brief_description_about_your_help">Give a brief description about your help</string>
    <string name="title">Title</string>
    <string name="title_helper">This will be visible to others</string>
    <string name="title_hint">A suitable title for your help</string>
    <string name="desc_help">Give a brief description for your help</string>
    <string name="description">Description</string>
    <string name="volunteers_needed">Volunteers needed</string>
    <string name="for_kids">For kids</string>
    <string name="reveal_identity">Reveal Identity</string>
    <string name="get_help">Get Help</string>
    <string name="by_clicking_you_agree_to_the_terms_and_conditions_of_this_app">By clicking, you agree to the Terms and Conditions of this app</string>
    <string name="help_description">Help Description</string>
    <string name="syringe_detoxil_2ml_pyrol_2mg_x2">Syringe, Detoxil 2ml, Pyrol 2mg x2</string>
    <string name="time">Time</string>
    <string name="_3_pm">3 PM</string>
    <string name="people_needed">People Needed</string>
    <string name="_2">2</string>
    <string name="specific_requirements">Specific Requirements</string>
    <string name="address">Address</string>
    <string name="_2349_5a_anand_vihar_delhi">2349/5A, Anand Vihar, Delhi</string>
    <string name="volunteer">Volunteer</string>
</resources>