<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.HelpDescriptionActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_32"
            android:paddingTop="@dimen/dimen_32"
            android:paddingRight="@dimen/dimen_32"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_icon_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/get_volunteers"
                android:textColor="#006DC2"
                android:textSize="@dimen/dimen_text_32" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_medium"
            android:paddingLeft="@dimen/dimen_32"
            android:paddingRight="@dimen/dimen_32"
            android:text="@string/give_a_brief_description_about_your_help"
            android:textColor="#C6C6C6"
            android:textSize="@dimen/dimen_text_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_94"
                android:layout_height="@dimen/dimen_94"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dimen_32"
                android:src="@drawable/ic_profile_placeholder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous"
                    android:fontFamily="@font/google_sans_medium"
                    android:textSize="@dimen/dimen_text_24"
                    android:textColor="#006DC2"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dimen_16"
                        android:layout_height="@dimen/dimen_16"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_icon_location"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/within_1kms"
                        android:textColor="#8C929E"
                        android:layout_marginStart="@dimen/dimen_4"
                        android:textSize="@dimen/dimen_text_16"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/help_description"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_16"
            android:textColor="#006DC2"
            android:textSize="@dimen/dimen_text_20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_2"
            android:layout_marginEnd="@dimen/dimen_32"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/bio_details"
            android:textColor="#8C929E"
            android:textSize="@dimen/dimen_text_16" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/specific_requirements"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginEnd="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_16"
            android:textColor="#006DC2"
            android:textSize="@dimen/dimen_text_20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_2"
            android:layout_marginEnd="@dimen/dimen_32"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/syringe_detoxil_2ml_pyrol_2mg_x2"
            android:textColor="#8C929E"
            android:textSize="@dimen/dimen_text_16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/time"
                    android:layout_marginStart="@dimen/dimen_32"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:textColor="#006DC2"
                    android:textSize="@dimen/dimen_text_20" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_32"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:layout_marginEnd="@dimen/dimen_32"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/_3_pm"
                    android:textColor="#8C929E"
                    android:textSize="@dimen/dimen_text_16" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/people_needed"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_32"
                    android:textColor="#006DC2"
                    android:textSize="@dimen/dimen_text_20" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_2"
                    android:layout_marginEnd="@dimen/dimen_32"
                    android:fontFamily="@font/google_sans_regular"
                    android:text="@string/_2"
                    android:textColor="#8C929E"
                    android:textSize="@dimen/dimen_text_16" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/address"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginEnd="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_16"
            android:textColor="#006DC2"
            android:textSize="@dimen/dimen_text_20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_2"
            android:layout_marginEnd="@dimen/dimen_32"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/_2349_5a_anand_vihar_delhi"
            android:textColor="#8C929E"
            android:textSize="@dimen/dimen_text_16" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginBottom="@dimen/dimen_16">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_help"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:text="@string/volunteer"
                android:textAllCaps="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_clicking_you_agree_to_the_terms_and_conditions_of_this_app"
                android:textColor="#8C929E"
                android:fontFamily="@font/google_sans_medium"
                android:textSize="@dimen/dimen_text_16"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_4"
                android:layout_below="@id/get_help"/>
        </RelativeLayout>
    </LinearLayout>
</layout>